[gd_scene load_steps=5 format=2]

[ext_resource path="res://System/AreaPanel.gd" type="Script" id=1]
[ext_resource path="res://System/Font/masque/MASQUE__.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]

size = 18
use_mipmaps = true
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 32
use_mipmaps = true
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[node name="AreaPanel" type="Panel" index="0"]

self_modulate = Color( 1, 1, 1, 0.784314 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 1080.0
margin_top = 175.0
margin_right = 490.0
margin_bottom = 271.0
rect_min_size = Vector2( 256, 64 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="NewAreaText" type="Label" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
margin_left = 31.0
margin_top = -38.0
margin_right = 157.0
margin_bottom = -6.0
rect_min_size = Vector2( 96, 32 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.320313, 0.320313, 0.320313, 1 )
text = "New Area!!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="AreaName" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
margin_left = 50.0
margin_top = -10.0
margin_right = 306.0
margin_bottom = 38.0
rect_min_size = Vector2( 96, 32 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0.320313, 0.320313, 0.320313, 1 )
text = "Area Name"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="MoveTween" type="Tween" parent="." index="2"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0
_sections_unfolded = [ "playback" ]

[node name="FadeTween" type="Tween" parent="." index="3"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0
_sections_unfolded = [ "playback" ]

[node name="StayTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 2.5
one_shot = true
autostart = false

[connection signal="tween_completed" from="MoveTween" to="." method="_on_MoveTween_completed"]

[connection signal="tween_completed" from="FadeTween" to="." method="_on_FadeTween_completed"]

[connection signal="timeout" from="StayTimer" to="." method="_on_StayTimer_timeout"]


